--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
       }
     ],
     "env": {
-      "API_URL": "https://664ab70ba300e8795d42b37c.mockapi.io/api/v1"
+      "VITE_APP_BASE_API": "https://664ab70ba300e8795d42b37c.mockapi.io/api/v1"
     }
   }
