--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
         "use": "@vercel/static"
       }
     ],
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
     "env": {
       "VITE_APP_BASE_API": "https://664ab70ba300e8795d42b37c.mockapi.io/api/v1"
     }
