--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "build/**",
-        "use": "@vercel/static"
-      }
-    ],
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
-    "env": {
-      "VITE_APP_BASE_API": "https://664ab70ba300e8795d42b37c.mockapi.io/api/v1"
-    }
-  }
+    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+}
