--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build"
-        }
-      }
-    ],
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
+    "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
